tooltip z-index fix

--- a/src/main/resources/public/css/custom.css
+++ b/src/main/resources/public/css/custom.css
@@ -280,6 +280,8 @@ input::-webkit-input-placeholder {
     border-radius: 4px;
 }
 .amenity {
+    z-index: 0;
+    position: relative;
     margin-top: 30px;
 }
 .amenity > div {
